--- a/backend/package.json
+++ b/backend/package.json
@@ -23,16 +23,19 @@
     "@apollo/server": "^4.9.3",
     "@nestjs/apollo": "^12.0.9",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "@prisma/client": "^5.3.1",
+    "@types/cookie-parser": "^1.4.7",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.8.1",
     "graphql-redis-subscriptions": "^2.6.0",
     "graphql-upload": "^14.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
