--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@apollo/client": "^3.10.8",
     "@apollo/link-ws": "^2.0.0-beta.3",
     "@clerk/clerk-react": "^5.2.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "apollo-upload-client": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
